# PicoPU

./: README.md
boards/RP2350A_chip_board/: MCU_RaspberryPi_RP2350.kicad_sym  RP2350A_chip_board-cache.lib  RP2350A_chip_board.kicad_pcb  RP2350A_chip_board.kicad_prl  RP2350A_chip_board.kicad_pro  RP2350A_chip_board.kicad_sch  RP2350_QFN60.step  fp-info-cache  fp-lib-table  sym-lib-table
boards/RP2350A_chip_board/RP2350A_chip_board.pretty/: RP2350-QFN-60-1EP_7x7_P0.4mm_EP3.4x3.4mm_ThermalVias.kicad_mod
boards/RP2350B_chip_board/: IS66WVH8M8ALL-166B1LI.kicad_sym  IS66WVH8M8ALL-166B1LI.step  MCU_RaspberryPi_RP2350.kicad_sym  MCU_RaspberryPi_RP2350.lib  RP2350B_chip_board-cache.lib  RP2350B_chip_board.kicad_pcb  RP2350B_chip_board.kicad_prl  RP2350B_chip_board.kicad_pro  RP2350B_chip_board.kicad_sch  RP2350B_chip_board.kicad_sch-bak  RP2350_QFN80.step  fp-info-cache  fp-lib-table  sym-lib-table
boards/RP2350B_chip_board/RP2350B_chip_board.pretty/: BGA25C100P5X5_800X600X120N.kicad_mod
broker-sim/: README.md  broker_driver.c
core-firmware/: .clang-format  .gitignore  CMakeLists.txt  core-firmware.c  qrast.c
core-firmware/common/: cluster_bus.h  ex_simd.h  picopu_types.h
core-firmware/shader_core/: CMakeLists.txt  chip_state.c  chip_state.h  graphics_state.c  graphics_state.h  raster_stage.c  shader_types.h  test_def.c  vertex_stage.c
